--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <p class="info">Gain access to our full library of tutorials along with expert code reviews. 
           Perfect for any developers who are serious about honing their skills.</p>
       </div>
-
       <div class="container2">
         <h2>Monthly Subscription</h2>
         <p class="value"><strong>&dollar;29</strong><span>per month</span></p>
@@ -45,13 +44,16 @@
           Flashcard decks
           New videos every week</p>
       </div>
-      <footer>
-        <p class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Your Name Here</a>.
-        </p>
-      </footer>
+
     </div>
   </main>
+  <div>
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
+</div>
 </body>
 </html>
